--- a/css/index.css
+++ b/css/index.css
@@ -93,7 +93,6 @@
     border-radius: 50%;
     font-size: 20px;
     cursor: pointer;
-    background: rgb(9,0,168);
     background: linear-gradient(45deg, rgba(9,0,168,1) 0%, rgba(94,228,255,1) 100%);
     /*color: #fff;*/
     /*background: linear-gradient(90deg, #f92c78, #4114a1);*/
@@ -112,7 +111,8 @@
     left: 25%;
     width: 40%;
     border-bottom: 2.5px solid rgb(255, 255, 255);
-    transition: transform .6s cubic-bezier(0.215, 0.61, 0.355, 1);
+    transition: transform .6s cubic-bezier(.215, 0.61, 0.355, 1);
+    
 }
 
 .menu-btn:before {
@@ -121,6 +121,7 @@
 
 .menu-btn:after {
     transform: translateY(8px);
+    
 }
 
 
@@ -129,7 +130,8 @@
     width: 100%;
     height: 100%;
     pointer-events: none;
-    transition: background .5s;
+    
+    
 }
 
 /* closing animation */
@@ -163,19 +165,6 @@
     margin: 15px 0;
 }
 
-.wrapper ul li a {
-    text-decoration: none;
-    font-size: 20px;
-    font-weight: 500;
-    padding: 5px 30px;
-    color: #fff;
-    line-height: 40px;
-    margin: 5px 0px;
-    opacity: 0;
-    transition: all 0.3s ease;
-    transition: transform .6s cubic-bezier(0.215, 0.61, 0.355, 1);
-    width:300px;
-}
 
 
 
@@ -183,9 +172,7 @@
     transform: scaleY(1);
 }
 
-.wrapper ul li a:hover {
-    color: #1a73e8;
-}
+
 
 input[type="checkbox"] {
     display: none;
@@ -212,21 +199,6 @@ input[type="checkbox"] {
     font-weight: 600;
 }
 
-#active:checked~.wrapper ul li a {
-    opacity: 1;
-}
-
-.wrapper ul li a {
-    transition: opacity 1.2s, transform 1.2s cubic-bezier(0.215, 0.61, 0.355, 1);
-    transform: translateX(100px);
-}
-
-#active:checked~.wrapper ul li a {
-    transform: none;
-    transition-timing-function: ease, cubic-bezier(.1, 1.3, .3, 1);
-    transition-delay: .6s;
-    transform: translateX(-100px);
-}
 
 
 .intro {
