--- a/css/index-animation.css
+++ b/css/index-animation.css
@@ -16,8 +16,9 @@
     height: 100%;
     object-fit: cover;
   }
+
   
-  .indexanimate #animation-bg {
+    #animation-bg {
     /* position: absolute; */
     width: 100%;
     height: 100%;
@@ -27,3 +28,13 @@
     background-size: 700px;
     mix-blend-mode: screen;
   }
+
+  /* .overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    z-index: 1;
+  } */
