--- a/css/index.css
+++ b/css/index.css
@@ -228,6 +228,36 @@ input[type="checkbox"] {
 
 }
 
+.introContent{
+    position: absolute;
+    top: 1400px;
+    left:50%;
+    transform: translate(-50%, -50%);
+
+}
+
+.h2intro01{
+
+    text-align: left;
+    margin-top: 25px;
+    font-family: 'Jost';
+    font-weight: 600;
+    font-size: 100px;
+    color: rgb(255, 255, 255);
+
+}
+
+.h2intro02{
+
+    text-align: left;
+    margin-top: 40px;
+    font-family: 'Noto Sans TC', sans-serif;
+    font-weight: 600;
+    font-size: 50px;
+    color: rgb(255, 255, 255);
+
+}
+
 .indexh1 {
     font-family: 'Jost';
     font-weight: 700;
