--- a/css/news.css
+++ b/css/news.css
@@ -54,6 +54,14 @@ body{
     font-size: 17px;
     color: rgb(90, 90, 90);
 }
+
+.indexp3 {
+    margin-top: 30px;
+    font-family: 'Noto Sans TC', sans-serif;
+    font-weight: 400;
+    font-size: 17px;
+    color: rgb(255, 255, 255);
+}
 .txtIn{
     text-indent: 2em;
 }
@@ -93,13 +101,26 @@ a:hover{
     display: none;
     float: left;
     width: 100%;
-    height: 50vh;
+    height: auto;
     margin-right: -100%;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     transition: -webkit-transform 0.6s ease-in-out;
     transition: transform 0.6s ease-in-out;
     transition: transform 0.6s ease-in-out, -webkit-transform 0.6s ease-in-out;
+}
+
+.carousel-item .row{
+    height: 50vh;
+}
+
+.carousel-item img{
+    position: relative;
+    height: 100%;
+    width: auto;
+    object-position: center;
+    overflow-x: hidden;
+    object-fit: cover;
 }
 
   /* 箭頭區塊調整為 width: 10%; */
@@ -253,6 +274,13 @@ a:hover{
 
 
 /* 客戶個案 */
+
+.newsCard{
+    height:500px;
+
+}
+
+
 .card-img-overlay .indexh2 {
     margin-top: 0;
     font-family: 'Noto Sans TC', sans-serif;
