--- a/css/news.css
+++ b/css/news.css
@@ -8,7 +8,7 @@
 
 * {
     /* border: 1px solid black; */
-    position: relative;
+
 }
 body{
     overflow-x: hidden;
@@ -70,8 +70,19 @@ a:hover{
     text-decoration: none;
 }
 .px-30 {
-    padding-right: 30%;
-    padding-left: 30%;
+    transform: translateX(-50%);
+    position: relative;
+    left:50%;
+    padding-left: 10%;
+    padding-right:10%;
+    width:600px;
+}
+
+@media only screen and (max-width:992px)  {
+    .px-30 {
+        width:90%;
+    }
+    
 }
 .px-10 {
     padding-right: 10%;
@@ -92,11 +103,78 @@ a:hover{
     height: 100%;
 }
 
-/* 最新消息 */
+/* Banner */
+.newsBanner{
 
+    background-image:linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),url('../img/news/architecture.jpg');
+    background-color: rgb(255, 255, 255);
+    background-position: center;
+    width:100%; 
+    height: 450px;
+    background-size: cover;
+
+}
+
+.newsBanner img{
+    
+    width:100px;
+    position: relative;
+    left:50%;
+    top:50%;
+    transform: translate(-50%,-50%);
+
+}
+/* 最新消息 */
+.Carousel{
+    left:50%;
+}
+
+
+.carouselCard {
+    background: #fff;
+    display: inline-block;
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.3);
+  }
+
+  .carouselCardImage {
+    float: left;
+    width: 50%;
+    height: 350px;
+  }
+
+  .carouselCardImage img {
+    max-width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+
+  }
+
+  @media only screen and (max-width: 992px) {
+    .carouselCardImage{
+        width: 100%;
+    }
+    
+  }
+
+  .carouselCardContent {
+    float: left;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    padding: 40px;
+  }
+
+  .carouselCardContent h4 {
+    margin: 5px 0;
+  }
 
 /* 固定幻燈片高度為 50vh */
-.carousel-item {
+/* .carousel-item {
     position: relative;
     display: none;
     float: left;
@@ -112,16 +190,16 @@ a:hover{
 
 .carousel-item .row{
     height: 50vh;
-}
+} */
 
-.carousel-item img{
-    position: relative;
+/* .carousel-item img{
+
     height: 100%;
     width: auto;
     object-position: center;
     overflow-x: hidden;
     object-fit: cover;
-}
+} */
 
   /* 箭頭區塊調整為 width: 10%; */
 .carousel-control-prev,
@@ -137,10 +215,9 @@ a:hover{
     -ms-flex-pack: center;
     justify-content: center;
     width: 10%;
-    color: #fff;
     text-align: center;
     border: none;
-    opacity: 1;
+    
     transition: opacity 0.15s ease;
 }
 
@@ -150,7 +227,7 @@ a:hover{
     display: inline-block;
     width: 30px;
     height: 30px;
-    background: no-repeat 50% / 100% 100%;
+    ;
 }
 
 /* fill那邊改成#005aaf(志宇設定的藍色) */
@@ -164,7 +241,6 @@ a:hover{
 
 .carousel-indicators {
     height: 20px;     /* 控制列 height: 20px; */
-    position: relative;
     right: 0;
     bottom: 0;
     left: 0;
@@ -222,19 +298,21 @@ a:hover{
     background-clip: border-box;
     border: 0;
     border-radius: 0.25rem; 
+    height:30vh;
+    width:auto;
+    overflow: hidden;
+    object-fit: cover;
 }
 
-.card-img-top {
-  -ms-flex-negative: 0;
-  flex-shrink: 0;
-  width: 100%;
-}
 .card-img,
 .card-img-bottom {
   -ms-flex-negative: 0;
   flex-shrink: 0;
-  /* width: 100%;    原設定 */
+  max-width: 100%;
   height: 100%;
+  object-fit: cover;
+
+  
 }
 .card-img-overlay {
     position: absolute;
@@ -246,7 +324,6 @@ a:hover{
     background-color: rgba(0, 90, 175, .7);
     margin:1em;
     border-radius: 0.25rem; 
-    padding: 2rem;
     opacity: 0; 
     transition: opacity .5s;
 }
@@ -276,7 +353,34 @@ a:hover{
 /* 客戶個案 */
 
 .newsCard{
-    height:500px;
+    height:400px;
+
+}
+
+.videobox {
+    position: relative;
+    width:100%;
+    height: auto;
+    
+}
+
+  @media only screen and (max-width: 992px) {
+    .videobox{
+        left: 54%;
+        margin-top: 20px;
+        padding-bottom: 56.25%;
+        transform: translateX(-50%);
+        
+    }
+    
+  }
+
+.videobox iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 
 }
 
@@ -314,6 +418,22 @@ a:hover{
     left: 50%;
     transform: translate(-50%, -50%);
     /* border: 1px solid #818181; */
+}
+
+@media only screen and (max-width: 992px){
+    .Cooperate{
+        align-items: center;
+        text-align: center;
+        padding:20px
+    }
+    .rec300{
+        transform: translateX(-50%);
+        left: 50%;
+        width:400px
+    }
+    .center{
+        padding-left: 0%;
+    }
 }
 
 
