--- a/css/news.css
+++ b/css/news.css
@@ -132,31 +132,35 @@ a:hover{
 
 .carouselCard {
     background: #fff;
-    display: inline-block;
+    margin-left: 10px;
+    margin-right: 10px;
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.3);
   }
 
-  .carouselCardImage {
-    float: left;
-    width: 50%;
-    height: 350px;
-  }
+
+
 
   .carouselCardImage img {
     max-width: 100%;
     height: 100%;
     object-fit: cover;
     position: absolute;
-    top: 0;
-    left: 0;
-
+    top:0;
+    left:0;
   }
+  
 
   @media only screen and (max-width: 992px) {
     .carouselCardImage{
         width: 100%;
+    }
+    .carouselCardImage img{
+        width: 100%;
+        position:absolute;
+        top:0;
+        left:0;
     }
     
   }
