--- a/css/news.css
+++ b/css/news.css
@@ -123,24 +123,76 @@ a:hover{
 
 }
 /* 最新消息 */
+
+.newsMain{
+
+    background-position: top center,bottom center;
+    background-color: #f3f3f3;
+    background-size: contain,contain;
+    background-repeat: no-repeat;
+    padding-bottom: 150px;
+    padding-top: 50px;
+}
+
 .Carousel{
     left:50%;
     transform: translateX(-50%);
 }
 
+.carouselImage{
+    
+    overflow: hidden; 
+    display:grid; 
+}
+
+.carouselContent{
+    padding: 40px;
+}
+
+.carouselImage img{
+    max-width: 120%;
+    height: 100%;
+    object-fit: cover;
+    margin:auto;
+    transform: translateX(-5%);
+
+}
+
 
 .carouselCard {
-
-    height:50vh;
-    width:100%;
+    height:500px;
     background: #fff;
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.3);
+    margin:10px;
   }
 
+@media only screen and (max-width:992px){
 
+    .indexh3 {
+        margin-top: 0px;
+    }
 
+    .carouselCard {
+    height:70vh;
+      }
+
+      .carouselImage{   
+        height:35%;
+    }
+
+    .carouselContent{
+        padding: 25px;
+    }
+
+}
+
+@media only screen and (max-width:768px){
+    .carouselCard {
+    height:80vh;
+      }
+}
 
   .carouselCardImage img {
 
@@ -297,6 +349,12 @@ a:hover{
 
 /* 服務項目 */
 
+.newsServices{
+    background-color: #ffffff;
+    padding-top: 30px;
+    padding-bottom: 50px;
+}
+
 .card {
     position: relative;
     display: -ms-flexbox;
@@ -305,7 +363,7 @@ a:hover{
     flex-direction: column;
     min-width: 0;
     word-wrap: break-word;
-    background-color: #fff;
+    background-color: #ffffff;
     background-clip: border-box;
     border: 0;
     border-radius: 0.25rem; 
@@ -362,6 +420,11 @@ a:hover{
 
 
 /* 客戶個案 */
+.newsCase{
+    background-color: #f3f3f3;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
 
 .newsCard{
     height:400px;
@@ -447,238 +510,8 @@ a:hover{
     }
 }
 
-
-
-/* Footer */
-.footer {
-    background-color: #cbcbcb;
-    color: #CCCCCC;
-    margin-bottom: -25px;
-    height: 300px;
+/*產品資訊*/
+.newsProduct{
+    padding-top: 30px;
 }
 
-
-.footer a {
-    color: #818181;
-    text-decoration: none;
-    font-size: 14px;
-}
-
-.footer a:hover {
-    color: #ffffff;
-    text-decoration: none;
-    transition: 0.5s;
-}
-
-/* hamburger */
-
-.wrapper {
-    position: fixed;
-    top: 0;
-    /*left: -100%;*/
-    right: -100%;
-    height: 100%;
-    width: 100%;
-    background: rgba(12, 13, 18, 0.9);
-    /*background: linear-gradient(90deg, #f92c78, #4114a1);*/
-    /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
-    /* background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%);*/
-    transition: all 0.6s ease-in-out;
-    z-index: 99;
-}
-
-.wapperContent{
-    margin:80px;
-}
-
-.wapperContentWord{
-    text-align: end;
-}
-
-.wapperContentWord a{
-    text-decoration: none;
-    font-family: 'Jost';
-    font-size: 75px;
-    font-weight: 500;
-    text-align: end;
-    color: #fff;
-    line-height: 150%;
-    opacity: 0.5;
-    transition: 0.3s;
-
-}
-
-.wapperContentWord a:hover{
-    opacity: 1;
-}
-
-@media only screen and (max-width: 768px) {
-    .wapperContent img {
-        position: absolute;
-        margin-top: -150px;
-        width:60px;    
-    }
-    .wapperContentWord {
-        margin-top: 200px;    
-    }
-    .wapperContentWord a{
-        text-decoration: none;
-        font-family: 'Jost';
-        font-size: 50px;
-        font-weight: 500;
-        text-align: center;
-        color: #fff;
-        line-height: 150%;
-        opacity: 0.5;    
-    }
-    .wapperContentWord img{
-        display: none;
-    }
-}
-
-#active:checked~.wrapper {
-    /*left: 0;*/
-    right: 0;
-}
-
-.menu-btn {
-    position: fixed;
-    z-index: 100;
-    right: 20px;
-    /*left: 20px; */
-    top: 20px;
-    height: 60px;
-    width: 70px;
-    text-align: center;
-    line-height: 50px;
-    border-radius: 50%;
-    font-size: 20px;
-    cursor: pointer;
-    /*color: #fff;*/
-    /*background: linear-gradient(90deg, #f92c78, #4114a1);*/
-    /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
-    /* background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%); */
-    transition: all 0.3s ease-in-out;
-}
-
-.menu-btn span,
-.menu-btn:before,
-.menu-btn:after {
-    content: "";
-    position: absolute;
-    top: calc(50% - 1px);
-    left: 30%;
-    width: 40%;
-    border-bottom: 2px solid #000;
-    transition: transform .6s cubic-bezier(0.215, 0.61, 0.355, 1);
-}
-
-.menu-btn:before {
-    transform: translateY(-8px);
-}
-
-.menu-btn:after {
-    transform: translateY(8px);
-}
-
-.close {
-    z-index: 1;
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-    transition: background .6s;
-}
-
-/* closing animation */
-#active:checked+.menu-btn span {
-    transform: scaleX(0);
-}
-
-#active:checked+.menu-btn:before {
-    transform: rotate(45deg);
-    border-color: #fff;
-}
-
-#active:checked+.menu-btn:after {
-    transform: rotate(-45deg);
-    border-color: #fff;
-}
-
-.wrapper ul {
-    position: absolute;
-    width:100%;
-    top: 63%;
-    left: 50%;
-    height: 90%;
-    transform: translate(-50%, -50%);
-    list-style: none;
-    text-align: center;
-}
-
-.wrapper ul li {
-    height: 10%;
-    margin: 15px 0;
-}
-
-.wrapper ul li a {
-    text-decoration: none;
-    font-size: 25px;
-    font-weight: 500;
-    padding: 5px 30px;
-    color: #fff;
-    line-height: 50px;
-    margin: 5px 0px;
-    opacity: 0;
-    transition: all 0.3s ease;
-    transition: transform .6s cubic-bezier(0.215, 0.61, 0.355, 1);
-    width:300px;
-}
-
-.wrapper ul li a:hover:after {
-    transform: scaleY(1);
-}
-
-.wrapper ul li a:hover {
-    color: #1a73e8;
-}
-
-input[type="checkbox"] {
-    display: none;
-}
-
-.content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: -1;
-    text-align: center;
-    width: 100%;
-    color: #202020;
-}
-
-.content .title {
-    font-size: 40px;
-    font-weight: 700;
-}
-
-.content p {
-    font-size: 35px;
-    font-weight: 600;
-}
-
-#active:checked~.wrapper ul li a {
-    opacity: 1;
-}
-
-.wrapper ul li a {
-    transition: opacity 1.2s, transform 1.2s cubic-bezier(0.215, 0.61, 0.355, 1);
-    transform: translateX(100px);
-}
-
-#active:checked~.wrapper ul li a {
-    transform: none;
-    transition-timing-function: ease, cubic-bezier(.1, 1.3, .3, 1);
-    transition-delay: .6s;
-    transform: translateX(-100px);
-}
